--- a/index.html
+++ b/index.html
@@ -26,9 +26,23 @@
 <body>
     <!-------Header--------->
         <header class="header_wrap" id="header">
-            
+            <div class="top_navbar">
+                <div class="top_right">
+                    <p>Follow us
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <i class="fa fa-facebook-f" aria-hidden="true"></i>
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </p>
+                </div>
+                <div class="top_left">
+                    <p>Call us: +234 70 433 2832</p>
+                </div>
+            </div>
+            <hr>
             <!-- navigation menu -->
             <nav class="nav_bar">
+                <a href="#" class="nav_logo"><img src="images/KWLClogo.svg" alt="KWLC Logo"></a>
                 <!----------Navigation Links--------->
                 <div class="nav_menu" id="nav-menu">
                     <ul class="nav_list">
@@ -70,8 +84,7 @@
                 </div>
             </nav>
         </header>
-    </header>
-
+   
     <!-------Main Body--------->
     <div class="main_container">
 
