--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <!-- service-area-end -->
 
         <!-- about-area-start -->
-        <section class="about-area">
+        <section class="about_area">
             <div class="container">
                 <div class="row">
                     <div class="about_col">
@@ -152,7 +152,7 @@
                     </div>
                     <div class="about_col right">
                         <div class="about_right">
-                            <h2>You're Welcome</h2>
+                            <h3>You're Welcome</h3>
                             <p style="padding-top: 2rem;">Hello people,</p>
                             <br>
                             <p>
