--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                         <li class="nav_item"><a href="event.html" class="nav_link">Events</a></li>
                         <li class="nav_item"><a href="blog.html" class="nav_link">Blog</a></li>
                         <li class="nav_item"><a href="shop.html" class="nav_link">Shop</a></li>
-                        <li class="nav_item"><a href="cart.html" class="nav_link"><i class="icofont-shopping-cart"></i></a></li>
+                        <li class="nav_item"><a href="cart.html" class="nav_link"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                        <li class="nav_item"><a href="cart.html" class="nav_link"><i class="fa fa-search" aria-hidden="true"></i></i></a></li>
                         <div class="nav_item">
                             <div class="dropdown">
                                 <div class="nav_tog">
